@@ -58,6 +58,7 @@ t/overload.t
 t/plan.t
 t/plan_is_noplan.t
 t/plan_no_plan.t
+t/plan_shouldnt_import.t
 t/plan_skip_all.t
 t/reset.t
 t/simple.t
