@@ -1,4 +1,5 @@
 0.52
+    - plan() was accidentally exporting functions [rt.cpan.org 8385]
     * diag @msgs would insert # between arguments. [rt.cpan.org 8392]
     * eq_set() could cause problems under threads due to a weird sort bug
       [rt.cpan.org 6782]
